add tests api for first task